--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
       </div>
       <div class="carousel-inner text-center">
         <div class="carousel-item active">
-          <img src="images/banner.png" class="d-block w-100" alt="...">
+          <img src="images/banner.png" class="d-block w-100 h-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>The perfect event for your next event</h5>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem minus nemo ducimus, dicta aut nam dolores quae debitis voluptates eum magnam dolore deleniti delectus rem facilis ad natus, temporibus dignissimos!</p>
+            <a href="#" class="btn btn-lg text-primary bg-white">
+              Book Now
+            </a>
           </div>
         </div>
         <div class="carousel-item">
@@ -68,6 +71,9 @@
           <div class="carousel-caption d-none d-md-block">
             <h5>The perfect event for your next event</h5>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem minus nemo ducimus, dicta aut nam dolores quae debitis voluptates eum magnam dolore deleniti delectus rem facilis ad natus, temporibus dignissimos!</p>
+            <a href="#" class="btn btn-lg text-primary bg-white">
+              Book Now
+            </a>
           </div>
         </div>
         <div class="carousel-item">
@@ -75,6 +81,9 @@
           <div class="carousel-caption d-none d-md-block">
             <h5>The perfect event for your next event</h5>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem minus nemo ducimus, dicta aut nam dolores quae debitis voluptates eum magnam dolore deleniti delectus rem facilis ad natus, temporibus dignissimos!</p>
+            <a href="#" class="btn btn-lg text-primary bg-white">
+              Book Now
+            </a>
           </div>
         </div>
       </div>
